--- a/C-Programming-with-Linux/C-Programming-with-Linux.vcxproj
+++ b/C-Programming-with-Linux/C-Programming-with-Linux.vcxproj
@@ -132,7 +132,9 @@
     <ClCompile Include="C Programming Getting Started - 1/WeekThree.c" />
     <ClCompile Include="C Programming Getting Started - 1/WeekTwo.c" />
     <ClCompile Include="C Programming Language Foundations - 2/Week_Two.c" />
-    <ClCompile Include="Week_Three.c" />
+    <ClCompile Include="Week-Three.c" />
+    <ClCompile Include="Week-Two.c" />
+    <ClCompile Include="Week_one.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
